css/medium.css
.hero-section {
    background-color: #f5f5f5;
    padding: 60px 20px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin: 0;
}
.hero-content {
    max-width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    justify-content: center;
    text-align: center;
    position: relative !important;
}
.blog-container {
    max-width: 100vw;
    margin: 0 auto;
    padding: 20px;
}
.hero-content h1 {
    font-size: 2.5em;
    margin: 0 auto;
    color: #333;
    text-align: center;
}
.hero-content p {
    margin: 0 auto;
    font-size: 1.2em;
    color: #666;
    text-align: center;
}
.hero-image {
    max-width: 100%;
    height: 100%;
    border: 1px solid #ddd;
    padding: 5px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
    max-height: 100vh !important;
}
.blog-home-image {
    max-width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.medium-widget {
    margin-top: 40px;
}
.medium-widget iframe {
    width: 100%;
    height: 1000px;
    border: none;
    border-radius: 8px;
}

 .btn-primary {
    background-color: #042d4d;
    color: #fff;
    padding: 10px 20px;
    text-decoration: none;
    border-radius: 4px;
    transition: background-color 0.3s ease;
}

@media screen and (max-width: 768px) {
    .hero-section {
        padding: 40px 10px;
        margin-bottom: 5vh;
    }
    .hero-content h1 {
        font-size: 1.8em;
    }
    .hero-content p {
        font-size: 1em;
    }
    
}

